# os-traits

./: .gitignore  .gitreview  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/ext/: traits.py
doc/source/: conf.py  index.rst  installation.rst  usage.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
os_capabilities/: __init__.py
os_capabilities/tests/: test_os_capabilities.py
os_traits/: __init__.py  const.py  utils.py
os_traits/compute/: __init__.py  arch.py  config_drive.py  ephemeral.py  firmware.py  graphics.py  image.py  migrate.py  net.py  security.py  sound.py  storage.py  usb.py  viommu.py
os_traits/hw/: arch.py
os_traits/hw/cpu/: amd.py  x86.py
os_traits/hw/cpu/ppc64le/: __init__.py
os_traits/hw/cpu/x86/: __init__.py  amd.py
os_traits/hw/gpu/: api.py  cuda.py
os_traits/hw/nic/: __init__.py  accel.py  dcb.py  offload.py  sriov.py
os_traits/hw/pci/: __init__.py
os_traits/owner/: __init__.py
os_traits/storage/: disk.py
os_traits/tests/: test_os_traits.py
releasenotes/notes/: add-owner-trait-f33e0e038961cbbd.yaml
releasenotes/source/: conf.py  index.rst
